# spreads

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  alembic.ini  backend_repo_plan.md  call_credit_spread_scanner.py  credit_spread_scanner.py  docker-compose.yml  features_tracker.md  intraday_idea_collector.py  options_scanner_research_log.md  post_close_analysis.py  pyproject.toml  scanner_history.py
.agents/plugins/: marketplace.json
alembic/: env.py
alembic/versions/: 20260407_0001_initial_history_schema.py  20260407_0002_calendar_event_tables.py  20260407_0003_collector_live_state.py  20260407_0004_alert_tables.py  20260407_0005_job_orchestration_tables.py  20260407_0006_post_market_analysis_runs.py  20260407_0007_generator_jobs.py  20260408_0008_live_job_sessions.py  20260408_0009_execution_tables.py  20260408_0010_session_positions.py  20260409_0011_broker_sync_and_policies.py  20260409_0012_backfill_generator_job_runs.py  20260409_0013_drop_generator_jobs_table.py  20260410_0014_event_log.py  20260410_0015_signal_state_and_opportunities.py  20260410_0016_risk_decisions_and_execution_handoff.py  20260410_0017_control_plane_tables.py  20260410_0018_option_trade_events.py  20260410_0019_alert_delivery_outbox.py  20260412_0020_canonical_live_selection.py  20260412_0021_execution_attempt_context.py  20260413_0022_truthful_live_recovery.py  20260414_0023_runtime_pipelines_and_positions.py  20260414_0024_retire_session_positions.py  20260415_0025_options_automation_runtime.py  20260416_0026_config_driven_runtime_prereq.py  20260418_0027_execution_attempt_owner_refs.py
apps/: __init__.py
apps/api/: AGENTS.md  app.py  errors.py  lifespan.py  main.py
apps/web/: AGENTS.md  Dockerfile  README.md  package-lock.json  package.json
calendar_events/: __init__.py  models.py  policy.py  resolver.py  store.py
calendar_events/adapters/: alpaca_corporate_actions.py  base.py  earnings_calendar.py  macro_calendar.py
data/: macro_calendar.json
docs/: current_system_state.md  database.md
docs/diagrams/: README.md
docs/planning/: 0dte_system_architecture.md  README.md  (+32 more)
greeks/: __init__.py
tests/: AGENTS.md  test_deployment_policy.py  test_earnings_phase.py  test_earnings_roi_e2e.py  test_earnings_signal_flow_e2e.py  test_live_collector_architecture_e2e.py  test_long_vol_live_flow_e2e.py  test_scheduler_coalescing.py  test_selection_summary.py
(+263 files in other folders)
